# zzhack-cli

./: .gitignore  Cargo.toml  LICENSE  README.md  README_ZH.md  projects.config.json  zzhack.config.json
src/: config.rs  main.rs  reducer.rs  template.rs  zzhack.config.template.json
src/driver/: apply_app.rs  apply_contacts.rs  apply_footer.rs  apply_github_bar.rs  apply_links.rs  apply_posts.rs  apply_profile.rs  apply_projects.rs  apply_router.rs  apply_static_resource.rs  common.rs  html.rs  mod.rs
src/utils/: exec.rs
